--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# firebase configuration
+/firebase/
+/lib/firebase_options.dart
